--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de masestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas incríebles que se pueden hacer con ramas</p>
                 <p>Los blogs son la meor forma de compartir informacíon y tus idead. Mucho más que asistir a convenciones o salir en youtube. Excepto si eres rockstar. Pero por ahora no lo creo...</p>
+                <p>Suscribete y hazte maestro</p>
             </div>
         </div>
         
