--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/helmet.png.png"
                 Hyperblog 2.0
                 <span id="tagline">Tu blog de Git</span>
             </div>
